--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@prisma/client": "^6.19.2",
     "@tanstack/react-query": "^5.90.20",
     "bcrypt": "^6.0.0",
