--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@emailjs/browser": "^4.4.1",
     "@prisma/client": "^6.19.2",
     "@tanstack/react-query": "^5.90.20",
