--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
     "@emailjs/browser": "^4.4.1",
     "@prisma/client": "^6.19.2",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
+    "autoprefixer": "^10.4.23",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
@@ -23,20 +24,19 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pg": "^8.16.3",
+    "postcss": "^8.5.6",
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "swr": "^2.3.8",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "autoprefixer": "^10.4.23"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
+    "@types/node": "^20.19.33",
     "@types/pg": "^8.16.0",
-    "@types/react": "^19",
+    "@types/react": "^19.2.14",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
